# dulayni

./: .dockerignore  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  galsenai.txt  pyproject.toml  requirements.txt
config/: development.json  production.json
src/dulayni/: __init__.py  __main__.py  cli.py  client.py  config.py
src/dulayni/agents/: __init__.py  agent.py  legal-agent.py  react.py
src/dulayni/api/: cli.py  server.py
src/dulayni/auth/: authenticator.py
src/dulayni/config/: manager.py  templates.py
src/dulayni/graph/: state.py
src/dulayni/infrastructure/: docker.py
src/dulayni/mcp/: api.py  cli.py  client.py  server.py
src/dulayni/project/: initializer.py
src/dulayni/prompts/: __init__.py
src/dulayni/tools/: __init__.py
src/dulayni/utils/: __init__.py
