[project]
name = "dulayni"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "moctarjallo", email = "moctar.diallo@kajande.com" }
]
requires-python = ">=3.12"
dependencies = [
    "ipdb",
    "click>=8.2.1",
    "google-genai>=1.25.0",
    "mcp>=1.11.0",
    "openai>=1.95.1",
    "python-dotenv>=1.1.1",
    "pyzmq>=27.0.0",
    "rich>=14.0.0",
    "textual>=4.0.0",
    "langchain_openai",
    "langchain-mcp-adapters",
    "langgraph",
]

[project.scripts]
dulayni = "dulayni:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
