[project]
name = "dulayni"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "moctarjallo", email = "moctar.diallo@kajande.com" }
]
requires-python = ">=3.12"
dependencies = [
    "ipdb",
    "click>=8.2.1",
    "google-genai>=1.25.0",
    "fastmcp>=2.11.3",
    "openai>=1.95.1",
    "python-dotenv>=1.1.1",
    "pyzmq>=27.0.0",
    "rich>=14.0.0",
    "textual>=4.0.0",
    "langchain_openai",
    "langchain-mcp-adapters",
    "langgraph",
    "langgraph-checkpoint-sqlite",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "requests>=2.31.0",
    "pydantic>=2.7.0",
]

[project.scripts]
dulayni = "dulayni:main"
dulayni-server = "dulayni.mcp.cli:server"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"