[project]
name = "dulayni"
version = "0.1.0"
description = "RAG agent CLI tool and Python library using MCP servers"
# readme = {file = "README.md", content-type = "text/markdown"}
authors = [
    { name = "moctarjallo", email = "moctar.diallo@kajande.com" }
]
requires-python = ">=3.12"
dependencies = [
    "ipdb",
    "click>=8.2.1",
    "google-genai>=1.25.0",
    "fastmcp>=2.11.3",
    "openai>=1.95.1",
    "python-dotenv>=1.1.1",
    "pyzmq>=27.0.0",
    "rich>=14.0.0",
    "textual>=4.0.0",
    "langchain_openai",
    "langchain",
    "langchain_core",
    "langchain-mcp-adapters",
    "langgraph",
    "langgraph-checkpoint-sqlite",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "requests>=2.31.0",
    "pydantic>=2.7.0",
    "black>=25.1.0",
    "langgraph-checkpoint-postgres>=2.0.23",
    "psycopg[binary]>=3.0.0",
    "claude-code-sdk>=0.0.20",
]

[project.scripts]
dulayni = "dulayni.cli:main"
dulayni-server = "dulayni.mcp.server:start_server"
dulayni-api = "dulayni.mcp.api:start_api"

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
    "mypy",
    "pre-commit",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]

